2025-08-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test48-session-timeout): Extend test.

2025-08-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test22-file-times): Adapt test.

2025-08-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (tramp-archive-test50-auto-load)
	(tramp-archive-test50-delay-load)
	(tramp-archive-test51-without-remote-files): Rename.

	* tramp-tests.el (tramp--test-operation)
	(tramp--handler-for-test-operation): New defuns.
	(tramp-test49-external-backend-function): New test.
	(tramp-test50-auto-load, tramp-test50-delay-load)
	(tramp-test50-recursive-load, tramp-test50-remote-load-path)
	(tramp-test51-without-remote-files, tramp-test52-unload): Rename.

2025-07-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0.1 released

	* tramp-tests.el (tramp-test18-file-attributes)
	(tramp-test19-directory-files-and-attributes): Extend tests.

2025-07-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test46-file-notifications): Tag it :unstable.

2025-07-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (filenotify): Require.
	(ert-remote-temporary-file-directory)
	(tramp-test41-special-characters, tramp-test42-utf8)
	(tramp-test45-asynchronous-requests): Do not check for
	EMACS_HYDRA_CI environment variable.
	(tramp-test46-file-notifications): New test.

2025-06-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0 released

2025-06-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (project-mode-line-format, project-mode-line): Declare.
	(tramp-test48-session-timeout): New test.
	(tramp-test49-auto-load, tramp-test49-delay-load)
	(tramp-test49-recursive-load, tramp-test49-remote-load-path)
	(tramp-test50-without-remote-files, tramp-test51-unload): Rename.

2025-05-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-enabled): Make it more robust.
	(tramp-test18-file-attributes)