@@ -1,3 +1,10 @@
+2025-08-29  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (edebug-mode): Declare.
+	(tramp--test-message): Write also trace value.
+	(tramp-test26-file-name-completion):
+	(tramp-test26-interactive-file-name-completion): Extend tests.
+
 2025-08-17  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test48-session-timeout): Extend test.
